Fixing Logo Background Dark Mode

--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -43,7 +43,7 @@
   --ifm-hr-border-color: var(--thirdweb-border-color);
   --ifm-footer-padding-vertical: 5rem;
   --ifm-navbar-padding-horizontal: 1.5rem;
-  --ifm-navbar-background-color: var(--thirdweb-background-color);
+  --ifm-navbar-background-color: var(--ifm-background-color);
 
   --ifm-hover-overlay: rgba(191, 4, 4, 0.05);
 
